--- a/MovilTDM/AppTransportista/AppTransportista/App.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/App.xaml
@@ -5,6 +5,18 @@
 	<Application.Resources>
 
 		<!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <!-- General colors -->
+            <Color x:Key="MainColor">#ff3b77</Color>
+            <Color x:Key="FontColor">#52656b</Color>
+            <Color x:Key="AccentColor1">#cdff00</Color>
+            <Color x:Key="AccentColor2">#b8b89f</Color>
+            <Color x:Key="BackgroundColor">#ffffff</Color>
+            <!-- Menu colors -->
+            <Color x:Key="MenuColor">#52656b</Color>
+            <Color x:Key="MenuFontColor">#ffffff</Color>
 
-	</Application.Resources>
+        </ResourceDictionary>
+
+    </Application.Resources>
 </Application>
