--- a/MovilTDM/AppTransportista/AppTransportista/App.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/App.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:infra="clr-namespace:AppTransportista.Infrastructure;assembly=AppTransportista"
              x:Class="AppTransportista.App">
 	<Application.Resources>
 
@@ -16,6 +17,9 @@
             <Color x:Key="MenuColor">#52656b</Color>
             <Color x:Key="MenuFontColor">#ffffff</Color>
 
+            <!-- Locator -->
+            <infra:InstanceLocator x:Key="Locator"></infra:InstanceLocator>
+        
         </ResourceDictionary>
 
     </Application.Resources>
