--- a/MovilTDM/AppTransportista/AppTransportista/Pages/MenuPage.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/Pages/MenuPage.xaml
@@ -3,10 +3,39 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTransportista.Pages.MenuPage"
              BackgroundColor="{StaticResource MenuColor}"
+             BindingContext="{Binding Main,Source={StaticResource Locator}}"
              Title="Menú">
+
     
-    <Label Text="Menu " 
-           TextColor="{StaticResource MenuFontColor}"
-           VerticalOptions="Center"
-           HorizontalOptions="Center"/>
+    <ListView
+        ItemsSource="{Binding Menu}"
+        HasUnevenRows="True">
+            <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <Grid Padding="8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                     
+                     
+                            <Image
+                              Source="{Binding Icon }"
+                              VerticalOptions="Start"
+                              WidthRequest="50"
+                             />
+                            <Label
+                            Grid.Column="1"
+                            VerticalOptions="Center"
+                            TextColor="{StaticResource MenuFontColor}"
+                            Text="{Binding Title}"/>
+                      
+                    </Grid>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
+
+
 </ContentPage>
