--- a/MovilTDM/AppTransportista/AppTransportista/Pages/ClientsPage.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/Pages/ClientsPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTransportista.Pages.ClientsPage"
-             Title="Clientes">
-    <Label Text="{StaticResource MainText}"
+             >
+    <Label Text="client"
            VerticalOptions="Center"
            HorizontalOptions="Center"
            />
