--- a/MovilTDM/AppTransportista/AppTransportista/Pages/MenuPage.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/Pages/MenuPage.xaml
@@ -14,6 +14,10 @@
             <DataTemplate>
                 <ViewCell>
                     <Grid Padding="8">
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding NavigateCommand}"/>
+                        </Grid.GestureRecognizers>
+
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
