--- a/MovilTDM/AppTransportista/AppTransportista/Pages/SettingsPage.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/Pages/SettingsPage.xaml
@@ -3,4 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTransportista.Pages.SettingsPage"
              Title="Setting">
+    <Label Text="setting"
+           VerticalOptions="Center"
+           HorizontalOptions="Center"
+           />
 </ContentPage>
