--- a/MovilTDM/AppTransportista/AppTransportista/Pages/MainPage.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/Pages/MainPage.xaml
@@ -7,42 +7,11 @@
              BindingContext="{Binding Main, Source={StaticResource Locator}}">
 
     <ListView
+        ItemTemplate="{StaticResource OrderItemTemplate}"
         ItemsSource="{Binding Orders}"
         HasUnevenRows="True">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <ViewCell>
-                    <Grid Padding="8">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Image
-                              Source="icon.png"
-                              VerticalOptions="Start"
-                              WidthRequest="50"
-                              HeightRequest="50"
-                             />
-                        <StackLayout Grid.Column="1">
-                            <Label
-                            VerticalOptions="Center"
-                            TextColor="{StaticResource FontColor}"
-                            Text="{Binding Title}"/>
-                            <Label
-                            VerticalOptions="Center"
-                            TextColor="{StaticResource FontColor}"
-                            Text="{Binding Description}"/>
-                            <Label
-                            VerticalOptions="Center"
-                            TextColor="{StaticResource MainColor}"
-                            Text="{Binding DeliveryDate,StringFormat='{0:yyyy/MM/dd}'}"/>
-
-                        </StackLayout> 
-                        
-                    </Grid>
-                </ViewCell>
-            </DataTemplate>
-        </ListView.ItemTemplate>
+        <!--<ListView.ItemTemplate>
+        </ListView.ItemTemplate>-->
     </ListView>
 
 
