--- a/MovilTDM/AppTransportista/AppTransportista/Pages/MenuPage.xaml
+++ b/MovilTDM/AppTransportista/AppTransportista/Pages/MenuPage.xaml
@@ -6,24 +6,43 @@
              BindingContext="{Binding Main,Source={StaticResource Locator}}"
              Title="Menú">
 
-    
-    <ListView
+    <StackLayout>
+
+        <StackLayout Orientation="Horizontal">
+            <Label Text="E-Commerce"
+               TextColor="{StaticResource MenuFontColor}"
+               FontSize="24"
+               FontAttributes="Bold"
+               HorizontalOptions="StartAndExpand"
+               VerticalOptions="Center"
+               ></Label>
+            <Image Source="ic_launcher.png"
+               WidthRequest="80"
+               HeightRequest="80"
+               HorizontalOptions="End"
+               VerticalOptions="Center"></Image>
+7
+        </StackLayout>
+        <BoxView HeightRequest="3">
+            
+        </BoxView>
+        <ListView
         ItemsSource="{Binding Menu}"
         HasUnevenRows="True">
             <ListView.ItemTemplate>
-            <DataTemplate>
-                <ViewCell>
-                    <Grid Padding="8">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding NavigateCommand}"/>
-                        </Grid.GestureRecognizers>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid Padding="8">
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding NavigateCommand}"/>
+                            </Grid.GestureRecognizers>
 
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                     
-                     
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+
+
                             <Image
                               Source="{Binding Icon }"
                               VerticalOptions="Start"
@@ -34,12 +53,16 @@
                             VerticalOptions="Center"
                             TextColor="{StaticResource MenuFontColor}"
                             Text="{Binding Title}"/>
-                      
-                    </Grid>
-                </ViewCell>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+    </StackLayout>
+    
+  
 
 
 </ContentPage>
